// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.

syntax = "proto3";

package rkcy.examples.rpg.pb;
option go_package = "github.com/lachlanorr/rocketcycle/examples/rpg/pb";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "storage.proto";

message MmoRequest {
    string id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {pattern: "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}", min_length: 1}];
}

service MmoService {
    rpc GetPlayer(MmoRequest) returns (rkcy.examples.rpg.pb.Player) {
        option (google.api.http) = {
            get: "/v1/player/get/{id}"
        };
    }
    rpc CreatePlayer(rkcy.examples.rpg.pb.Player) returns (rkcy.examples.rpg.pb.Player) {
        option (google.api.http) = {
            post: "/v1/player/create"
            body: "*"
        };
    }
}

